style.css
* {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    
}

/* dive DEEP into this, understand how everything works,
   and also how it SHOULD work. Don't fall behind.*/

body {
    position: relative;
    
}

.navbar {
    position: fixed;
    top: 15px;
}

#top-left-items {
    position: fixed;
    float: left;
}

#top-right-items {
    position: fixed;
    float: right;
    right: 150px;
}

#navbar-link li{
    list-style-type: none;
    display: inline;
    padding-left: 15px;
    opacity: 0.75;
}

a {
    text-decoration: none;
    color: black;
}

a:hover, a:active {
    text-decoration: underline;
}

.content-body {
    /* maybe could define # of rows/cols to manage this easier w/o padding*/
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
    row-gap: 2em;
    column-gap: 1em;
    width: 700px;
    justify-content: center;
  
    padding-top: 15em;
    margin: auto;
}

.content-body-two {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    
    width: 500px;
    justify-content: space-around;
  
    padding-top: 2em;
    margin: auto;
}

.content-body button{
    opacity: 0.75;
}

#flx-itm-1 {

    width: 272px;
}

#flx-itm-2 {
    width: 95%;  
}

#flx-itm-3 {
    margin-left: 75px;
    height: 35px;
}

#flx-itm-4 {
    margin-right: 76px;
    height: 35px;
}

.footer {
    background: lightgrey;
    line-height: 40px;
    min-width: 980px;
    border-top: 1px solid #e4e4e4;
    height: 40px;
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    width: 100%;
}



#bottom-left-items {
    display: block;
    float: left;
    margin: 0;
    margin-bottom: 5px;
    
}

#bottom-right-items {
    display: block;
    float: right;
    margin-right: 25px;
    margin-bottom: 5px;
}

